Added Duck sounds

--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -1379,6 +1379,9 @@
 	"subtitles.mubble.entity.chincho.ambient": "Chincho spricht",
 	"subtitles.mubble.entity.chincho.hurt": "Chincho nimmt Schaden",
 	"subtitles.mubble.entity.chincho.death": "Chincho stirbt",
+	"//subtitles.mubble.entity.duck.ambient": "Duck quacks",
+	"//subtitles.mubble.entity.duck.hurt": "Duck hurts",
+	"//subtitles.mubble.entity.duck.death": "Duck dies",
 	"//subtitles.mubble.entity.fireball.throw": "Fireball flies",
 	"//subtitles.mubble.entity.iceball.throw": "Iceball flies",
 	"subtitles.mubble.entity.goomba.crush": "Goomba zerschmettert",
