--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -1379,6 +1379,9 @@
 	"subtitles.mubble.entity.chincho.ambient": "Chincho qui parle",
 	"subtitles.mubble.entity.chincho.hurt": "Chincho blessé",
 	"subtitles.mubble.entity.chincho.death": "Chincho qui meurt",
+	"//subtitles.mubble.entity.duck.ambient": "Duck quacks",
+	"//subtitles.mubble.entity.duck.hurt": "Duck hurts",
+	"//subtitles.mubble.entity.duck.death": "Duck dies",
 	"subtitles.mubble.entity.fireball.throw": "Boule de feu lancée",
 	"subtitles.mubble.entity.iceball.throw": "Boule de glace lancée",
 	"subtitles.mubble.entity.goomba.crush": "Goomba écrasé",
