--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -1379,6 +1379,9 @@
 	"subtitles.mubble.entity.chincho.ambient": "Chincho praat",
 	"subtitles.mubble.entity.chincho.hurt": "Chincho heeft pijn",
 	"subtitles.mubble.entity.chincho.death": "Chincho sterft",
+	"//subtitles.mubble.entity.duck.ambient": "Duck quacks",
+	"//subtitles.mubble.entity.duck.hurt": "Duck hurts",
+	"//subtitles.mubble.entity.duck.death": "Duck dies",
 	"subtitles.mubble.entity.fireball.throw": "Vuurbal vliegt",
 	"subtitles.mubble.entity.iceball.throw": "IJsbal vliegt",
 	"subtitles.mubble.entity.goomba.crush": "Goomba verpletterd",
