Added duck food
Made ducks spawn where in any biome where chickens spawn

--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -1139,6 +1139,8 @@
 	"item.mubble.apricot": "Aprikose",
 	"item.mubble.mango": "Mango",
 	"item.mubble.blueberries": "Blaubeeren",
+	"//item.mubble.duck": "Duck",
+	"//item.mubble.cooked_duck": "Cooked Duck",
 	"item.mubble.jingle_bells": "Klingelglocken",
 	"item.mubble.small_bulb": "Kleine Glühbirne",
 	"item.mubble.totem_of_ascending": "Totem des Aufsteigends",
