--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -1139,6 +1139,8 @@
 	"item.mubble.apricot": "Abricot",
 	"item.mubble.mango": "Mangue",
 	"item.mubble.blueberries": "Myrtilles",
+	"item.mubble.duck": "Canard",
+	"item.mubble.cooked_duck": "Canard rôti",
 	"item.mubble.jingle_bells": "Grelots",
 	"item.mubble.small_bulb": "Petite ampoule",
 	"item.mubble.totem_of_ascending": "Totem d'ascendance",
@@ -1240,7 +1242,7 @@
 	"item.mubble.remix_disc_nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (NoteBlock Remix)",
 
 
-	"//item.mubble.duck_spawn_egg": "Duck Spawn Egg",
+	"item.mubble.duck_spawn_egg": "Oeuf d'apparition de canard",
 	"item.mubble.chincho_spawn_egg": "Oeuf d'apparition de Chincho",
 	"item.mubble.goomba_spawn_egg": "Oeuf d'apparition de Goomba",
 	"item.mubble.toad_spawn_egg": "Oeuf d'apparition de Toad",
@@ -1379,9 +1381,9 @@
 	"subtitles.mubble.entity.chincho.ambient": "Chincho qui parle",
 	"subtitles.mubble.entity.chincho.hurt": "Chincho blessé",
 	"subtitles.mubble.entity.chincho.death": "Chincho qui meurt",
-	"//subtitles.mubble.entity.duck.ambient": "Duck quacks",
-	"//subtitles.mubble.entity.duck.hurt": "Duck hurts",
-	"//subtitles.mubble.entity.duck.death": "Duck dies",
+	"subtitles.mubble.entity.duck.ambient": "Coin-coin de canard",
+	"subtitles.mubble.entity.duck.hurt": "Canard blessé",
+	"subtitles.mubble.entity.duck.death": "Canard qui meurt",
 	"subtitles.mubble.entity.fireball.throw": "Boule de feu lancée",
 	"subtitles.mubble.entity.iceball.throw": "Boule de glace lancée",
 	"subtitles.mubble.entity.goomba.crush": "Goomba écrasé",
