--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -1139,6 +1139,8 @@
 	"item.mubble.apricot": "Abrikoos",
 	"item.mubble.mango": "Mango",
 	"item.mubble.blueberries": "Blauwebessen",
+	"//item.mubble.duck": "Duck",
+	"//item.mubble.cooked_duck": "Cooked Duck",
 	"item.mubble.jingle_bells": "Jingle bellen",
 	"item.mubble.small_bulb": "Kleine lamp",
 	"item.mubble.totem_of_ascending": "Totem der opstijging",
