--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -1139,6 +1139,8 @@
 	"item.mubble.apricot": "Damasco",
 	"item.mubble.mango": "Manga",
 	"//item.mubble.blueberries": "Blueberries",
+	"//item.mubble.duck": "Duck",
+	"//item.mubble.cooked_duck": "Cooked Duck",
 	"//item.mubble.jingle_bells": "Jingle Bells",
 	"//item.mubble.small_bulb": "Small Bulb",
 	"item.mubble.totem_of_ascending": "Totem da Ascensão",
