--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -1139,6 +1139,8 @@
 	"item.mubble.apricot": "ʇoɔᴉɹd∀",
 	"item.mubble.mango": "oƃuɐW",
 	"//item.mubble.blueberries": "Blueberries",
+	"//item.mubble.duck": "Duck",
+	"//item.mubble.cooked_duck": "Cooked Duck",
 	"//item.mubble.jingle_bells": "Jingle Bells",
 	"//item.mubble.small_bulb": "Small Bulb",
 	"item.mubble.totem_of_ascending": "ƃuᴉpuǝɔs∀ ɟo ɯǝʇo┴",
