Fixed a french translation

--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -1381,7 +1381,7 @@
 	"subtitles.mubble.entity.chincho.ambient": "Chincho qui parle",
 	"subtitles.mubble.entity.chincho.hurt": "Chincho blessé",
 	"subtitles.mubble.entity.chincho.death": "Chincho qui meurt",
-	"subtitles.mubble.entity.duck.ambient": "Coin-coin de canard",
+	"subtitles.mubble.entity.duck.ambient": "Canard qui cancane",
 	"subtitles.mubble.entity.duck.hurt": "Canard blessé",
 	"subtitles.mubble.entity.duck.death": "Canard qui meurt",
 	"subtitles.mubble.entity.fireball.throw": "Boule de feu lancée",
