Fixed a small issue in nl_nl

--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -33,7 +33,7 @@
 	"block.mubble.smooth_red_sandstone_vertical_slab": "Gladde rode zandstenen plaat verticaal",
 	"block.mubble.nether_brick_vertical_slab": "Netherbakstenen plaat verticaal",
 	"block.mubble.red_nether_brick_vertical_slab": "Rode Netherbakstenen plaat verticaal",
-	"block.mubble.kwarts_vertical_slab": "Kwartsplaat verticaal",
+	"block.mubble.quartz_vertical_slab": "Kwartsplaat verticaal",
 	"block.mubble.smooth_quartz_vertical_slab": "Gladde kwartsplaat verticaal",
 	"block.mubble.end_stone_brick_vertical_slab": "Endblokstenen plaat verticaal",
 	"block.mubble.purpur_vertical_slab": "Purpurplaat verticaal",
