--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -1167,6 +1167,9 @@
 	"item.mubble.nsmbu_key": "Key (NSMBU)",
 
 
+	"item.mubble.kirby_ball": "Kirby Ball",
+
+
 	"item.mubble.smash_ball": "Smash Ball",
 
 
@@ -1345,6 +1348,8 @@
 	"entity.mubble.fireball": "Fireball",
 	"entity.mubble.iceball": "Iceball",
 
+	"entity.mubble.kirby_ball": "Kirby Ball",
+
 
 
 	"comment": "EFFECTS",
@@ -1387,6 +1392,7 @@
 	"subtitles.mubble.entity.duck.death": "Duck dies",
 	"subtitles.mubble.entity.fireball.throw": "Fireball flies",
 	"subtitles.mubble.entity.iceball.throw": "Iceball flies",
+	"subtitles.mubble.entity.kirby_ball.throw": "Kirby Ball flies",
 	"subtitles.mubble.entity.goomba.crush": "Goomba crushed",
 	"subtitles.mubble.entity.goomba.hurt": "Goomba hurts",
 	"subtitles.mubble.entity.goomba.death": "Goomba dies",
