--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -43,33 +43,33 @@
 
 	"block.mubble.dark_prismarine_wall": "Muret de prismarine sombre",
 
-	"//block.mubble.oak_wood_stairs": "Oak Wood Stairs",
-	"//block.mubble.spruce_wood_stairs": "Spruce Wood Stairs",
-	"//block.mubble.birch_wood_stairs": "Birch Wood Stairs",
-	"//block.mubble.jungle_wood_stairs": "Jungle Wood Stairs",
-	"//block.mubble.acacia_wood_stairs": "Acacia Wood Stairs",
-	"//block.mubble.dark_oak_wood_stairs": "Dark Oak Wood Stairs",
-	
-	"//block.mubble.oak_wood_slab": "Oak Wood Slab",
-	"//block.mubble.spruce_wood_slab": "Spruce Wood Slab",
-	"//block.mubble.birch_wood_slab": "Birch Wood Slab",
-	"//block.mubble.jungle_wood_slab": "Jungle Wood Slab",
-	"//block.mubble.acacia_wood_slab": "Acacia Wood Slab",
-	"//block.mubble.dark_oak_wood_slab": "Dark Oak Wood Slab",
+	"block.mubble.oak_wood_stairs": "Escalier en bois de chêne",
+	"block.mubble.spruce_wood_stairs": "Escalier en bois de sapin",
+	"block.mubble.birch_wood_stairs": "Escalier en bois de bouleau",
+	"block.mubble.jungle_wood_stairs": "Escalier en bois d'acajou",
+	"block.mubble.acacia_wood_stairs": "Escalier en bois d'acacia",
+	"block.mubble.dark_oak_wood_stairs": "Escalier en bois de chêne noir",
 
-	"//block.mubble.oak_wood_vertical_slab": "Oak Wood Vertical Slab",
-	"//block.mubble.spruce_wood_vertical_slab": "Spruce Wood Vertical Slab",
-	"//block.mubble.birch_wood_vertical_slab": "Birch Wood Vertical Slab",
-	"//block.mubble.jungle_wood_vertical_slab": "Jungle Wood Vertical Slab",
-	"//block.mubble.acacia_wood_vertical_slab": "Acacia Wood Vertical Slab",
-	"//block.mubble.dark_oak_wood_vertical_slab": "Dark Oak Wood Vertical Slab",
+	"block.mubble.oak_wood_slab": "Dalle en bois de chêne",
+	"block.mubble.spruce_wood_slab": "Dalle en bois de sapin",
+	"block.mubble.birch_wood_slab": "Dalle en bois de bouleau",
+	"block.mubble.jungle_wood_slab": "Dalle en bois d'acajou",
+	"block.mubble.acacia_wood_slab": "Dalle en bois d'acacia",
+	"block.mubble.dark_oak_wood_slab": "Dalle en bois de chêne noir",
 
-	"//block.mubble.oak_wood_button": "Oak Wood Button",
-	"//block.mubble.spruce_wood_button": "Spruce Wood Button",
-	"//block.mubble.birch_wood_button": "Birch Wood Button",
-	"//block.mubble.jungle_wood_button": "Jungle Wood Button",
-	"//block.mubble.acacia_wood_button": "Acacia Wood Button",
-	"//block.mubble.dark_oak_wood_button": "Dark Oak Wood Button",
+	"block.mubble.oak_wood_vertical_slab": "Dalle verticale en bois de chêne",
+	"block.mubble.spruce_wood_vertical_slab": "Dalle verticale en bois de sapin",
+	"block.mubble.birch_wood_vertical_slab": "Dalle verticale en bois de bouleau",
+	"block.mubble.jungle_wood_vertical_slab": "Dalle verticale en bois d'acajou",
+	"block.mubble.acacia_wood_vertical_slab": "Dalle verticale en bois d'acacia",
+	"block.mubble.dark_oak_wood_vertical_slab": "Dalle verticale en bois de chêne noir",
+
+	"block.mubble.dark_oak_wood_button": "Bouton en bois de chêne",
+	"block.mubble.spruce_wood_button": "Bouton en bois de sapin",
+	"block.mubble.birch_wood_button": "Bouton en bois de bouleau",
+	"block.mubble.jungle_wood_button": "Bouton en bois d'acajou",
+	"block.mubble.acacia_wood_button": "Bouton en bois d'acacia",
+	"block.mubble.dark_oak_wood_button": "Bouton en bois de chêne noir",
 
 	"block.mubble.oak_leaf_pile": "Pile de feuilles de chêne",
 	"block.mubble.spruce_leaf_pile": "Pile de feuilles de sapin",
@@ -78,66 +78,66 @@
 	"block.mubble.acacia_leaf_pile": "Pile de feuilles de acacia",
 	"block.mubble.dark_oak_leaf_pile": "Pile de feuilles de chêne noir",
 
-	"//block.mubble.cobblestone_bricks": "Cobblestone Bricks",
-	"//block.mubble.cobblestone_brick_stairs": "Cobblestone Brick Stairs",
-	"//block.mubble.cobblestone_brick_slab": "Cobblestone Brick Slab",
-	"//block.mubble.cobblestone_brick_vertical_slab": "Cobblestone Brick Vertical Slab",
-	"//block.mubble.cobblestone_brick_wall": "Cobblestone Brick Wall",
-	"//block.mubble.mossy_cobblestone_bricks": "Mossy Cobblestone Bricks",
-	"//block.mubble.mossy_cobblestone_brick_stairs": "Mossy Cobblestone Brick Stairs",
-	"//block.mubble.mossy_cobblestone_brick_slab": "Mossy Cobblestone Brick Slab",
-	"//block.mubble.mossy_cobblestone_brick_vertical_slab": "Mossy Cobblestone Brick Vertical Slab",
-	"//block.mubble.mossy_cobblestone_brick_wall": "Mossy Cobblestone Brick Wall",
-	"//block.mubble.granite_bricks": "Granite Bricks",
-	"//block.mubble.granite_brick_stairs": "Granite Brick Stairs",
-	"//block.mubble.granite_brick_slab": "Granite Brick Slab",
-	"//block.mubble.granite_brick_vertical_slab": "Granite Brick Vertical Slab",
-	"//block.mubble.granite_brick_wall": "Granite Brick Wall",
-	"//block.mubble.diorite_bricks": "Diorite Bricks",
-	"//block.mubble.diorite_brick_stairs": "Diorite Brick Stairs",
-	"//block.mubble.diorite_brick_slab": "Diorite Brick Slab",
-	"//block.mubble.diorite_brick_vertical_slab": "Diorite Brick Vertical Slab",
-	"//block.mubble.diorite_brick_wall": "Diorite Brick Wall",
-	"//block.mubble.andesite_bricks": "Andesite Bricks",
-	"//block.mubble.andesite_brick_stairs": "Andesite Brick Stairs",
-	"//block.mubble.andesite_brick_slab": "Andesite Brick Slab",
-	"//block.mubble.andesite_brick_vertical_slab": "Andesite Brick Vertical Slab",
-	"//block.mubble.andesite_brick_wall": "Andesite Brick Wall",
+	"block.mubble.cobblestone_bricks": "Briques de pierres",
+	"block.mubble.cobblestone_brick_stairs": "Escalier en briques de pierres",
+	"block.mubble.cobblestone_brick_slab": "Dalle en briques de pierres",
+	"block.mubble.cobblestone_brick_vertical_slab": "Dalle verticale en briques de pierres",
+	"block.mubble.cobblestone_brick_wall": "Muret en briques de pierres",
+	"block.mubble.mossy_cobblestone_bricks": "Briques de pierres moussues",
+	"block.mubble.mossy_cobblestone_brick_stairs": "Escalier en briques de pierres moussues",
+	"block.mubble.mossy_cobblestone_brick_slab": "Dalle en briques de pierres moussues",
+	"block.mubble.mossy_cobblestone_brick_vertical_slab": "Dalle verticale en briques de pierres moussues",
+	"block.mubble.mossy_cobblestone_brick_wall": "Muret en briques de pierres moussues",
+	"block.mubble.granite_bricks": "Briques de granite",
+	"block.mubble.granite_brick_stairs": "Escalier en briques de granite",
+	"block.mubble.granite_brick_slab": "Dalle en briques de granite",
+	"block.mubble.granite_brick_vertical_slab": "Dalle verticale en briques de granite",
+	"block.mubble.granite_brick_wall": "Muret en briques de granite",
+	"block.mubble.diorite_bricks": "Briques de diorite",
+	"block.mubble.diorite_brick_stairs": "Escalier en briques de diorite",
+	"block.mubble.diorite_brick_slab": "Dalle en briques de diorite",
+	"block.mubble.diorite_brick_vertical_slab": "Dalle verticale en briques de diorite",
+	"block.mubble.diorite_brick_wall": "Muret en briques de diorite",
+	"block.mubble.andesite_bricks": "Briques d'andésite",
+	"block.mubble.andesite_brick_stairs": "Escalier en briques d'andésite",
+	"block.mubble.andesite_brick_slab": "Dalle en briques d'andésite",
+	"block.mubble.andesite_brick_vertical_slab": "Dalle verticale en briques d'andésite",
+	"block.mubble.andesite_brick_wall": "Muret en briques d'andésite",
 
-	"//block.mubble.sandstone_bricks": "Sandstone Bricks",
-	"//block.mubble.sandstone_brick_stairs": "Sandstone Brick Stairs",
-	"//block.mubble.sandstone_brick_slab": "Sandstone Brick Slab",
-	"//block.mubble.sandstone_brick_vertical_slab": "Sandstone Brick Vertical Slab",
-	"//block.mubble.sandstone_brick_wall": "Sandstone Brick Wall",
-	"//block.mubble.polished_sandstone": "Polished Sandstone",
-	"//block.mubble.polished_sandstone_stairs": "Polished Sandstone Stairs",
-	"//block.mubble.polished_sandstone_slab": "Polished Sandstone Slab",
-	"//block.mubble.polished_sandstone_vertical_slab": "Polished Sandstone Vertical Slab",
-	"//block.mubble.red_sandstone_bricks": "Red Sandstone Bricks",
-	"//block.mubble.red_sandstone_brick_stairs": "Red Sandstone Brick Stairs",
-	"//block.mubble.red_sandstone_brick_slab": "Red Sandstone Brick Slab",
-	"//block.mubble.red_sandstone_brick_vertical_slab": "Red Sandstone Brick Vertical Slab",
-	"//block.mubble.red_sandstone_brick_wall": "Red Sandstone Brick Wall",
-	"//block.mubble.polished_red_sandstone": "Polished Red Sandstone",
-	"//block.mubble.polished_red_sandstone_stairs": "Polished Red Sandstone Stairs",
-	"//block.mubble.polished_red_sandstone_slab": "Polished Red Sandstone Slab",
-	"//block.mubble.polished_red_sandstone_vertical_slab": "Polished Red Sandstone Vertical Slab",
+	"block.mubble.sandstone_bricks": "Briques de grès",
+	"block.mubble.sandstone_brick_stairs": "Escalier en briques de grès",
+	"block.mubble.sandstone_brick_slab": "Dalle en briques de grès",
+	"block.mubble.sandstone_brick_vertical_slab": "Dalle verticale en briques de grès",
+	"block.mubble.sandstone_brick_wall": "Muret en briques de grès",
+	"block.mubble.polished_sandstone": "Grès poli",
+	"block.mubble.polished_sandstone_stairs": "Escalier en grès poli",
+	"block.mubble.polished_sandstone_slab": "Dalle en grès poli",
+	"block.mubble.polished_sandstone_vertical_slab": "Dalle verticale en grès poli",
+	"block.mubble.red_sandstone_bricks": "Briques de grès rouge",
+	"block.mubble.red_sandstone_brick_stairs": "Escalier en briques de grès rouge",
+	"block.mubble.red_sandstone_brick_slab": "Dalle en briques de grès rouge",
+	"block.mubble.red_sandstone_brick_vertical_slab": "Dalle verticale en briques de grès rouge",
+	"block.mubble.red_sandstone_brick_wall": "Muret en briques de grès rouge",
+	"block.mubble.polished_red_sandstone": "Grès rouge poli",
+	"block.mubble.polished_red_sandstone_stairs": "Escalier en grès rouge poli",
+	"block.mubble.polished_red_sandstone_slab": "Dalle en grès rouge poli",
+	"block.mubble.polished_red_sandstone_vertical_slab": "Dalle verticale en grès rouge poli",
 
-	"//block.mubble.smooth_stone_paving": "Smooth Stone Paving",
-	"//block.mubble.smooth_stone_paving_stairs": "Smooth Stone Paving Stairs",
-	"//block.mubble.smooth_stone_paving_slab": "Smooth Stone Paving Slab",
-	"//block.mubble.smooth_stone_paving_vertical_slab": "Smooth Stone Paving Vertical Slab",
+	"block.mubble.smooth_stone_paving": "Carrelage de roche lisse",
+	"block.mubble.smooth_stone_paving_stairs": "Escalier en carrelage de roche lisse",
+	"block.mubble.smooth_stone_paving_slab": "Dalle en carrelage de roche lisse",
+	"block.mubble.smooth_stone_paving_vertical_slab": "Dalle verticale en carrelage de roche lisse",
 
-	"//block.mubble.chiseled_prismarine": "Chiseled Prismarine",
-	"//block.mubble.chiseled_prismarine_stairs": "Chiseled Prismarine Stairs",
-	"//block.mubble.chiseled_prismarine_slab": "Chiseled Prismarine Slab",
-	"//block.mubble.chiseled_prismarine_vertical_slab": "Chiseled Prismarine Vertical Slab",
-	"//block.mubble.chiseled_prismarine_wall": "Chiseled Prismarine Wall",
+	"block.mubble.chiseled_prismarine": "Prismarine sculptée",
+	"block.mubble.chiseled_prismarine_stairs": "Escalier en prismarine sculptée",
+	"block.mubble.chiseled_prismarine_slab": "Dalle en prismarine sculptée",
+	"block.mubble.chiseled_prismarine_vertical_slab": "Dalle verticale en prismarine sculptée",
+	"block.mubble.chiseled_prismarine_wall": "Muret en prismarine sculptée",
 	
-	"//block.mubble.prismarine_brick_paving": "Prismarine Brick Paving",
-	"//block.mubble.prismarine_brick_paving_stairs": "Prismarine Brick Paving Stairs",
-	"//block.mubble.prismarine_brick_paving_slab": "Prismarine Brick Paving Slab",
-	"//block.mubble.prismarine_brick_paving_vertical_slab": "Prismarine Brick Paving Vertical Slab",
+	"block.mubble.prismarine_brick_paving": "Carrelage de briques de prismarine",
+	"block.mubble.prismarine_brick_paving_stairs": "Escalier en carrelage de briques de prismarine",
+	"block.mubble.prismarine_brick_paving_slab": "Dalle en carrelage de briques de prismarine",
+	"block.mubble.prismarine_brick_paving_vertical_slab": "Dalle verticale en carrelage de briques de prismarine",
 	
 	"block.mubble.permarock": "Permaroche",
 	"block.mubble.permafrost_bricks": "Briques du Permafrost",
@@ -179,10 +179,10 @@
 	"block.mubble.cherry_oak_fence_gate": "Portillon en cerisier",
 	"block.mubble.cherry_oak_fence": "Barrière en cerisier",
 	"block.mubble.cherry_oak_door": "Porte en cerisier",
-	"//block.mubble.cherry_oak_wood_stairs": "Cherry Oak Wood Stairs",
-	"//block.mubble.cherry_oak_wood_slab": "Cherry Oak Wood Slab",
-	"//block.mubble.cherry_oak_wood_vertical_slab": "Cherry Oak Wood Vertical Slab",
-	"//block.mubble.cherry_oak_wood_button": "Cherry Oak Wood Button",
+	"block.mubble.cherry_oak_wood_stairs": "Escalier en bois de cerisier",
+	"block.mubble.cherry_oak_wood_slab": "Dalle en bois de cerisier",
+	"block.mubble.cherry_oak_wood_vertical_slab": "Dalle verticale en bois de cerisier",
+	"block.mubble.cherry_oak_wood_button": "Bouton en bois de cerisier",
 	
 	"block.mubble.palm_planks": "Planches de palmier",
 	"block.mubble.palm_sapling": "Pousse de palmier",
@@ -201,10 +201,10 @@
 	"block.mubble.palm_fence_gate": "Portillon en palmier",
 	"block.mubble.palm_fence": "Barrière en palmier",
 	"block.mubble.palm_door": "Porte en palmier",
-	"//block.mubble.palm_wood_stairs": "Palm Wood Stairs",
-	"//block.mubble.palm_wood_slab": "Palm Wood Slab",
-	"//block.mubble.palm_wood_vertical_slab": "Palm Wood Vertical Slab",
-	"//block.mubble.palm_wood_button": "Palm Wood Button",
+	"block.mubble.palm_wood_stairs": "Escalier en bois de palmier",
+	"block.mubble.palm_wood_slab": "Dalle en bois de palmier",
+	"block.mubble.palm_wood_vertical_slab": "Dalle verticale en bois de palmier",
+	"block.mubble.palm_wood_button": "Bouton en bois de palmier",
 
 	"block.mubble.blue_bricks": "Briques bleues",
 	"block.mubble.light_blue_bricks": "Briques bleu clairs",
@@ -967,19 +967,19 @@
 	"block.mubble.red_press_garden_leaf_pile": "Pile de feuilles rouges de Press Garden",
 	"block.mubble.pink_press_garden_leaves": "Feuilles roses de Press Garden",
 	"block.mubble.pink_press_garden_leaf_pile": "Pile de feuilles roses de Press Garden",
-	"block.mubble.press_garden_pressure_plate": "Plaque de pression en bois de Press Garden",
-	"block.mubble.press_garden_trapdoor": "Trappe en bois de Press Garden",
-	"block.mubble.press_garden_button": "Bouton en bois de Press Garden",
-	"block.mubble.press_garden_stairs": "Escalier en bois de Press Garden",
-	"block.mubble.press_garden_slab": "Dalle en bois de Press Garden",
-	"block.mubble.press_garden_vertical_slab": "Dalle verticale en bois de Press Garden",
-	"block.mubble.press_garden_fence_gate": "Portillon en bois de Press Garden",
-	"block.mubble.press_garden_fence": "Barrière en bois de Press Garden",
-	"block.mubble.press_garden_door": "Porte en bois de Press Garden",
-	"//block.mubble.press_garden_wood_stairs": "Press Garden Wood Stairs",
-	"//block.mubble.press_garden_wood_slab": "Press Garden Wood Slab",
-	"//block.mubble.press_garden_wood_vertical_slab": "Press Garden Wood Vertical Slab",
-	"//block.mubble.press_garden_wood_button": "Press Garden Wood Button",
+	"block.mubble.press_garden_pressure_plate": "Plaque de pression en planches de Press Garden",
+	"block.mubble.press_garden_trapdoor": "Trappe en planches de Press Garden",
+	"block.mubble.press_garden_button": "Bouton en planches de Press Garden",
+	"block.mubble.press_garden_stairs": "Escalier en planches de Press Garden",
+	"block.mubble.press_garden_slab": "Dalle en planches de Press Garden",
+	"block.mubble.press_garden_vertical_slab": "Dalle verticale en planches de Press Garden",
+	"block.mubble.press_garden_fence_gate": "Portillon en planches de Press Garden",
+	"block.mubble.press_garden_fence": "Barrière en planches de Press Garden",
+	"block.mubble.press_garden_door": "Porte en planches de Press Garden",
+	"block.mubble.press_garden_wood_stairs": "Escalier en bois de Press Garden",
+	"block.mubble.press_garden_wood_slab": "Dalle en bois de Press Garden",
+	"block.mubble.press_garden_wood_vertical_slab": "Dalle verticale en bois de Press Garden",
+	"block.mubble.press_garden_wood_button": "Bouton en bois de Press Garden",
 	
 	"block.mubble.spring": "Ressort",
 
@@ -1001,10 +1001,10 @@
 	"block.mubble.scarlet_fence_gate": "Portillon écarlate",
 	"block.mubble.scarlet_fence": "Barrière écarlate",
 	"block.mubble.scarlet_door": "Porte écarlate",
-	"//block.mubble.scarlet_wood_stairs": "Scarlet Wood Stairs",
-	"//block.mubble.scarlet_wood_slab": "Scarlet Wood Slab",
-	"//block.mubble.scarlet_wood_vertical_slab": "Scarlet Wood Vertical Slab",
-	"//block.mubble.scarlet_wood_button": "Scarlet Wood Button",
+	"block.mubble.scarlet_wood_stairs": "Escalier en bois écarlate",
+	"block.mubble.scarlet_wood_slab": "Dalle en bois écarlate",
+	"block.mubble.scarlet_wood_vertical_slab": "Dalle verticale en bois écarlate",
+	"block.mubble.scarlet_wood_button": "Bouton en bois écarlate",
 	"block.mubble.scarlet_mushroom": "Champignon écarlate",
 	"block.mubble.scarlet_orchid": "Orchidée écarlate",
 
@@ -1166,7 +1166,7 @@
 	"item.mubble.nsmbu_key": "Clé (NSMBU)",
 
 
-	"//item.mubble.kirby_ball": "Kirby Ball",
+	"item.mubble.kirby_ball": "Balle Kirby",
 
 
 	"item.mubble.smash_ball": "Balle Smash",
@@ -1347,7 +1347,7 @@
 	"entity.mubble.fireball": "Boule de feu",
 	"entity.mubble.iceball": "Boule de glace",
 
-	"//entity.mubble.kirby_ball": "Kirby Ball",
+	"entity.mubble.kirby_ball": "Balle Kirby",
 
 
 
@@ -1391,7 +1391,7 @@
 	"subtitles.mubble.entity.duck.death": "Canard qui meurt",
 	"subtitles.mubble.entity.fireball.throw": "Boule de feu lancée",
 	"subtitles.mubble.entity.iceball.throw": "Boule de glace lancée",
-	"//subtitles.mubble.entity.kirby_ball.throw": "Kirby Ball flies",
+	"subtitles.mubble.entity.kirby_ball.throw": "Balle Kirby lancée",
 	"subtitles.mubble.entity.goomba.crush": "Goomba écrasé",
 	"subtitles.mubble.entity.goomba.hurt": "Goomba blessé",
 	"subtitles.mubble.entity.goomba.death": "Goomba qui meurt",
