--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -159,6 +159,7 @@
 	"block.mubble.autumn_oak_sapling": "Herbsteichensetzling",
 	"block.mubble.autumn_oak_leaves": "Herbsteichenlaub",
 	"block.mubble.autumn_oak_leaf_pile": "Herbsteichenlaubteppich",
+	
 	"block.mubble.cherry_oak_planks": "Kirscheichenholzbretter",
 	"block.mubble.pink_cherry_oak_sapling": "Rosa Kirscheichensetzling",
 	"block.mubble.white_cherry_oak_sapling": "Weißer Kirscheichensetzling",
@@ -1166,6 +1167,9 @@
 	"item.mubble.nsmbu_key": "Schlüssel (NSMBU)",
 
 
+	"//item.mubble.kirby_ball": "Kirby Ball",
+
+
 	"item.mubble.smash_ball": "Smash-Ball",
 
 
@@ -1344,6 +1348,8 @@
 	"//entity.mubble.fireball": "Fireball",
 	"//entity.mubble.iceball": "Iceball",
 
+	"//entity.mubble.kirby_ball": "Kirby Ball",
+
 
 
 	"comment": "EFFECTS",
@@ -1386,6 +1392,7 @@
 	"//subtitles.mubble.entity.duck.death": "Duck dies",
 	"//subtitles.mubble.entity.fireball.throw": "Fireball flies",
 	"//subtitles.mubble.entity.iceball.throw": "Iceball flies",
+	"//subtitles.mubble.entity.kirby_ball.throw": "Kirby Ball flies",
 	"subtitles.mubble.entity.goomba.crush": "Goomba zerschmettert",
 	"subtitles.mubble.entity.goomba.hurt": "Goomba nimmt Schaden",
 	"subtitles.mubble.entity.goomba.death": "Goomba stirbt",
