--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -159,6 +159,7 @@
 	"block.mubble.autumn_oak_sapling": "Herfsteikkiemplant",
 	"block.mubble.autumn_oak_leaves": "Herfsteikbladeren",
 	"block.mubble.autumn_oak_leaf_pile": "Herfsteikbladeren tapijt",
+	
 	"block.mubble.cherry_oak_planks": "Kerseneikhouten planken",
 	"block.mubble.pink_cherry_oak_sapling": "Rozekerseneikkiemplant",
 	"block.mubble.white_cherry_oak_sapling": "Wittekerseneikkiemplant",
@@ -1166,6 +1167,9 @@
 	"item.mubble.nsmbu_key": "Sleutel (NSMBU)",
 
 
+	"//item.mubble.kirby_ball": "Kirby Ball",
+
+
 	"item.mubble.smash_ball": "Smash bal",
 
 
@@ -1344,6 +1348,8 @@
 	"entity.mubble.fireball": "Vuurbal",
 	"entity.mubble.iceball": "IJsbal",
 
+	"//entity.mubble.kirby_ball": "Kirby Ball",
+
 
 
 	"comment": "EFFECTS",
@@ -1386,6 +1392,7 @@
 	"subtitles.mubble.entity.duck.death": "Eend sterft",
 	"subtitles.mubble.entity.fireball.throw": "Vuurbal vliegt",
 	"subtitles.mubble.entity.iceball.throw": "IJsbal vliegt",
+	"//subtitles.mubble.entity.kirby_ball.throw": "Kirby Ball flies",
 	"subtitles.mubble.entity.goomba.crush": "Goomba verpletterd",
 	"subtitles.mubble.entity.goomba.hurt": "Goomba heeft pijn",
 	"subtitles.mubble.entity.goomba.death": "Goomba sterft",
