--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -159,6 +159,7 @@
 	"block.mubble.autumn_oak_sapling": "ƃuᴉldɐS ʞɐO uɯnʇn∀",
 	"block.mubble.autumn_oak_leaves": "sǝʌɐǝ˥ ʞɐO uɯnʇn∀",
 	"block.mubble.autumn_oak_leaf_pile": "ʇǝdɹɐƆ sǝʌɐǝ˥ ʞɐO uɯnʇn∀",
+	
 	"block.mubble.cherry_oak_planks": "sʞuɐlԀ ʞɐO ʎɹɹǝɥƆ",
 	"block.mubble.pink_cherry_oak_sapling": "ƃuᴉldɐS ʞɐO ʎɹɹǝɥƆ ʞuᴉԀ",
 	"block.mubble.white_cherry_oak_sapling": "ƃuᴉldɐS ʞɐO ʎɹɹǝɥƆ ǝʇᴉɥM",
@@ -1166,6 +1167,9 @@
 	"//item.mubble.nsmbu_key": "Key (NSMBU)",
 
 
+	"//item.mubble.kirby_ball": "Kirby Ball",
+
+
 	"item.mubble.smash_ball": "llɐq ɥsɐɯS",
 
 
@@ -1344,6 +1348,8 @@
 	"//entity.mubble.fireball": "Fireball",
 	"//entity.mubble.iceball": "Iceball",
 
+	"//entity.mubble.kirby_ball": "Kirby Ball",
+
 
 
 	"comment": "EFFECTS",
@@ -1386,6 +1392,7 @@
 	"//subtitles.mubble.entity.duck.death": "Duck dies",
 	"//subtitles.mubble.entity.fireball.throw": "Fireball flies",
 	"//subtitles.mubble.entity.iceball.throw": "Iceball flies",
+	"//subtitles.mubble.entity.kirby_ball.throw": "Kirby Ball flies",
 	"//subtitles.mubble.entity.goomba.crush": "Goomba crushed",
 	"//subtitles.mubble.entity.goomba.hurt": "Goomba hurts",
 	"//subtitles.mubble.entity.goomba.death": "Goomba dies",
