--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -159,6 +159,7 @@
 	"//block.mubble.autumn_oak_sapling": "Autumn Oak Sapling",
 	"//block.mubble.autumn_oak_leaves": "Autumn Oak Leaves",
 	"//block.mubble.autumn_oak_leaf_pile": "Autumn Oak Leaves Carpet",
+	
 	"//block.mubble.cherry_oak_planks": "Cherry Oak Planks",
 	"//block.mubble.pink_cherry_oak_sapling": "Pink Cherry Oak Sapling",
 	"//block.mubble.white_cherry_oak_sapling": "White Cherry Oak Sapling",
@@ -1166,6 +1167,9 @@
 	"//item.mubble.nsmbu_key": "Key (NSMBU)",
 
 
+	"//item.mubble.kirby_ball": "Kirby Ball",
+
+
 	"item.mubble.smash_ball": "Bola Smash",
 
 
@@ -1344,6 +1348,8 @@
 	"//entity.mubble.fireball": "Fireball",
 	"//entity.mubble.iceball": "Iceball",
 
+	"//entity.mubble.kirby_ball": "Kirby Ball",
+
 
 
 	"comment": "EFFECTS",
@@ -1386,6 +1392,7 @@
 	"//subtitles.mubble.entity.duck.death": "Duck dies",
 	"//subtitles.mubble.entity.fireball.throw": "Fireball flies",
 	"//subtitles.mubble.entity.iceball.throw": "Iceball flies",
+	"//subtitles.mubble.entity.kirby_ball.throw": "Kirby Ball flies",
 	"//subtitles.mubble.entity.goomba.crush": "Goomba crushed",
 	"//subtitles.mubble.entity.goomba.hurt": "Goomba hurts",
 	"//subtitles.mubble.entity.goomba.death": "Goomba dies",
